fixed until number input

--- a/src/fake_whatsapp/fake_whatsapp.html
+++ b/src/fake_whatsapp/fake_whatsapp.html
@@ -134,7 +134,7 @@
             <p style="margin-left: 10px; cursor: pointer; color:gainsboro;">otra opcion</p>
           </div>
           </div>
-          <div id="page-4" class="x15g3fpr x78zum5 xdt5ytf x5yr21d x17qophe x6ikm8r x10wlt62 x67bb7w x10l6tqk x13vifvy xh8yej3 xnpuxes">
+          <div id="page-4" class="x15g3fpr x78zum5 xdt5ytf x5yr21d x17qophe x6ikm8r x10wlt62 x67bb7w x10l6tqk x13vifvy xh8yej3 xnpuxes hidden">
             <h3>Agregar miembro</h3>
             <div style="margin-bottom: 20px;">
               <input
